# wowtoc

./: README.md  pyproject.toml
src/wowtoc/: __init__.py  wowtoc.py
